# tiny_control

./: .gitmodules  README.md
.devcontainer/: Dockerfile  devcontainer.json
controller/: CMakeLists.txt  package.xml
controller/include/: defs.h  joystick_node.h
controller/launch/: pkg_launch.py
controller/msg/: JoystickUpdate.msg
controller/src/: joystick_node.cpp  motors_driver_node.cpp
joystick_pkg/: CMakeLists.txt  package.xml
joystick_pkg/src/: joystick_node.cpp
